test/fail/async-param-mismatch.mo
func swap<T,U>(t : T, u: U): async () {
  ();
};
ignore swap<Int>(1,1);
